k8s/deploy-ackbar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ackbar
  namespace: ackbar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ackbar
  template:
    metadata:
      labels:
        app: ackbar
    spec:
      containers:
        - name: ackbar
          image: bespinian/ackbar:0.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
