k8s/deploy-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ackbar-redis
  namespace: ackbar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ackbar-redis
  template:
    metadata:
      labels:
        app: ackbar-redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
