k8s/svc-ackbar.yml
apiVersion: v1
kind: Service
metadata:
  name: ackbar
  namespace: ackbar
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: ackbar
