k8s/svc-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: ackbar-redis
  namespace: ackbar
spec:
  ports:
    - port: 6379
  selector:
    app: ackbar-redis
