k8s/ing-ackbar.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ackbar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /ackbar(/|$)(.*)
            backend:
              service:
                name: ackbar
                port:
                  number: 80
